Fix messages overflow by adding a scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,3 +12,8 @@
     margin-top:30px !important;
     width:500px !important;
 }
+
+#messages {
+    height:15em;
+    overflow-y:auto;
+}
